# phenome

./: .gitignore  Cargo.toml  Makefile.toml  nuke-timing.json  rotappo-config.yaml
crates/core/rotappo-adapter-bootstrappo/src/: assembly.rs
crates/core/rotappo-application/src/: runtime.rs
crates/ui/rotappo-ui-terminal/src/: format.rs
crates/ui/rotappo-ui-tui/src/: render.rs
deploy/: docker-compose.yml
deploy/k8s/: analytics-deployment.yaml  ml-deployment.yaml  service.yaml  tui-deployment.yaml
deploy/systemd/: rotappo-analytics.service  rotappo-ml.service  rotappo-tui.service
docs/architecture/: ARCH-1A-layered-map.md  ARCH-1B-migration-plan.md  ARCH-1D-cli-inventory.md  ARCH-3-crate-map.dot  ARCH-3-crate-map.md  ARCH-4-module-responsibilities.md  ARCH-4-structure.md  analytics-architecture.md  grpc-api.md  ml-models.md
docs/book/: SUMMARY.md  book.toml  domain-application.md  introduction.md  runtime-flow.md
docs/book/architecture/: data-models.md  diagrams.md  layered-crates-map.md  overview.md  ports-adapters.md
docs/book/runbooks/: bootstrap-tui.md  cli.md
docs/kanban/v0-0-1/: board.md  dependencies.dot
docs/kanban/v0-0-3/: board.md  dependencies.dot
docs/makefiles/: cli.toml
docs/makefiles/crates/core/: domain.toml  ports.toml
docs/runbooks/: analytics-service.md  ml-service.md  troubleshooting.md
lib/adapters/analytics/: Cargo.toml
lib/adapters/ml/: Cargo.toml
lib/adapters/ml/proto/: analytics.proto
lib/adapters/notification/: Cargo.toml
lib/adapters/phenome-adapter-ml/proto/: analytics.proto
lib/adapters/phenome-adapter-primer/: Cargo.toml  README.md
lib/adapters/primer/: Cargo.toml
lib/adapters/rotappo-adapter-analytics/: Cargo.toml  README.md
lib/adapters/rotappo-adapter-ml/: Cargo.toml  README.md
lib/adapters/rotappo-adapter-notification/: Cargo.toml  README.md
lib/core/rotappo-adapter-analytics/: Cargo.toml
lib/core/rotappo-adapter-ml/: Cargo.toml
lib/core/rotappo-adapter-notification/: Cargo.toml
lib/core/rotappo-domain/src/: lib.rs
lib/core/rotappo-ml/: Cargo.toml
lib/domain/phenome-domain/: Cargo.toml  README.md
lib/domain/src/: lib.rs
lib/ports/: Cargo.toml  README.md
lib/ports/phenome-ports/: Cargo.toml
lib/runtime/application/: Cargo.toml
lib/runtime/ml/: Cargo.toml
lib/runtime/rotappo-application/: Cargo.toml  README.md
lib/runtime/rotappo-ml/: Cargo.toml  README.md
lib/ui/core/: Cargo.toml
lib/ui/presentation/: Cargo.toml
lib/ui/rotappo-ui-core/: Cargo.toml  README.md
lib/ui/rotappo-ui-presentation/: Cargo.toml  README.md
lib/ui/rotappo-ui-terminal/: Cargo.toml  README.md
lib/ui/rotappo-ui-tui/: Cargo.toml  README.md
lib/ui/rotappo-ui-tui/src/: analytics_client.rs  lib.rs  render.rs  runner.rs
lib/ui/rotappo-ui-tui/src/adapter/bootstrap/panels/core/: status.rs
lib/ui/rotappo-ui-tui/src/adapter/bootstrap/panels/core/dependency_tree/: tree.rs
lib/ui/rotappo-ui-tui/src/adapter/bootstrap/panels/overlays/summary/: comparison.rs
lib/ui/rotappo-ui-tui/src/adapter/bootstrap/ui/core/state/: ui.rs
lib/ui/rotappo-ui-tui/src/adapter/bootstrap/ui/core/utils/: lookup.rs  style.rs
lib/ui/rotappo-ui-tui/src/adapter/clients/analytics/: anomalies.rs  metrics.rs  mod.rs  recommendations.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/app/: mod.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/app/behavior/: core.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/app/behavior/actions/: logs.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/app/behavior/lifecycle/: init.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/panels/views/main/graph/detail/assembly/columns/: access.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/panels/views/main/topology/: queue.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/support/state/: ui_state.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/support/util/data/: assembly.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/support/util/format/: color.rs  time.rs
lib/ui/rotappo-ui-tui/src/app/: actions.rs  collapse.rs  core.rs  graph.rs  hover.rs  input.rs  keyboard.rs  layout.rs  lifecycle.rs  mod.rs  navigation.rs  panel.rs  scroll.rs  tooltips.rs
lib/ui/rotappo-ui-tui/src/bootstrap/panels/: summary.rs
lib/ui/rotappo-ui-tui/src/layout/: mod.rs
lib/ui/rotappo-ui-tui/src/layout/shell_spec/: mod.rs  slots.rs  specs.rs
lib/ui/rotappo-ui-tui/src/panels/: assembly.rs  help.rs  main.rs  mod.rs  navbar.rs
lib/ui/rotappo-ui-tui/src/panels/analytics/: mod.rs  realtime.rs
lib/ui/rotappo-ui-tui/src/panels/bootstrap/: component_status.rs  dependency_tree.rs  interactive_menu.rs  mod.rs  success_summary.rs
lib/ui/rotappo-ui-tui/src/state/: hover.rs  ui_state.rs
lib/ui/rotappo-ui-tui/src/util/: mod.rs
lib/ui/terminal/: Cargo.toml
lib/ui/tui/: Cargo.toml
lib/ui/tui/src/adapter/clients/analytics/: connection.rs
lib/ui/tui/src/adapter/ui/app/behavior/graph/: types.rs
lib/ui/tui/src/adapter/ui/panels/chrome/: help.rs
lib/ui/tui/src/adapter/ui/panels/overlays/: tooltip.rs
lib/ui/tui/src/adapter/ui/panels/views/main/: shared.rs
scripts/: start-services.sh  stop-services.sh
src/: lib.rs  logging.rs
src/adapters/: bootstrappo.rs  mod.rs
src/adapters/bootstrappo/: health.rs  k8s.rs  mapping.rs  mod.rs  plan.rs
src/cli/: mod.rs
src/ports/: mod.rs
src/runtime/: mod.rs  runtime.rs
src/ui/: macros.rs  mod.rs  state.rs  util.rs
src/ui/app/: actions.rs  hover.rs  input.rs  mod.rs
src/ui/panels/: actions.rs  help.rs  logs.rs  problems.rs  settings.rs
tests/: analytics_service_test.rs  cli_bootstrappo_visualize.rs  cli_golden.rs  crate_boundaries.rs  interface_boundaries.rs  ml_service_test.rs  tui_analytics_test.rs
tests/fixtures/cli/: snapshot.json.txt  snapshot.ndjson.txt  snapshot.plain.txt
timing/: output-08012026-034437.json  output-08012026-061228.json  output-08012026-132129.json  output-08012026-133220.json  output-08012026-140146.json  output-08012026-141510.json  output-08012026-142709.json  output-08012026-150002.json  output-09012026-060311.json  output-09012026-073511.json  output-09012026-081750.json  output-09012026-100727.json  output-09012026-102720.json  output-658.json
(+150 files in other folders)
