[package]
name = "rotappo"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
  ".",
  "lib/core/rotappo-domain",
  "lib/core/rotappo-ports",
  "lib/core/rotappo-application",
  "lib/core/rotappo-adapter-bootstrappo",
  "lib/ui/rotappo-ui-presentation",
  "lib/ui/rotappo-ui-core",
  "lib/ui/rotappo-ui-terminal",
  "lib/ui/rotappo-ui-tui",
]
resolver = "2"

[features]
module-bootstrappo = [
  "dep:rotappo-adapter-bootstrappo",
  "rotappo-ui-terminal/bootstrappo-cli",
]
module-rotato = ["rotappo-ui-terminal/rotato-cli"]
cli = ["dep:rotappo-ui-terminal", "dep:tokio"]
ui-core = ["dep:rotappo-ui-core"]
tui = ["ui-core", "dep:rotappo-ui-tui"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli", "module-bootstrappo"]

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui", "module-bootstrappo"]

[dependencies]
anyhow = "1.0.100"
rotappo-adapter-bootstrappo = { path = "lib/core/rotappo-adapter-bootstrappo", optional = true }
rotappo-application = { path = "lib/core/rotappo-application" }
rotappo-domain = { path = "lib/core/rotappo-domain" }
rotappo-ui-core = { path = "lib/ui/rotappo-ui-core", optional = true }
rotappo-ui-terminal = { path = "lib/ui/rotappo-ui-terminal", optional = true }
rotappo-ui-tui = { path = "lib/ui/rotappo-ui-tui", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[dev-dependencies]
rotappo-ui-presentation = { path = "lib/ui/rotappo-ui-presentation" }
rotappo-ui-terminal = { path = "lib/ui/rotappo-ui-terminal" }
