[package]
name = "rotappo-ui-tui"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
crossterm = "0.28.1"
graphviz-rust = "0.9.6"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time"] }
tonic = "0.12.3"
serde_json = "1.0"

bootstrappo = { path = "../../../../primer" }

rotappo-application = { path = "../../runtime/rotappo-application" }
phenome-domain = { path = "../../domain/phenome-domain" }
phenome-ports = { path = "../../ports/phenome-ports" }
rotappo-ui-core = { path = "../rotappo-ui-core" }
rotappo-ui-presentation = { path = "../rotappo-ui-presentation" }
rotappo-adapter-analytics = { version = "0.0.1", path = "../../adapters/rotappo-adapter-analytics" }
tracing = "0.1.44"
